Rework Worker resources and property index routing