@@ -1,18 +1,20 @@
 package com.xa.mass.server.api.v1.model;
 
 import jakarta.validation.constraints.NotBlank;
-import java.util.List;
+import jakarta.validation.constraints.NotNull;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
 public record WorkerUpsertRequest(
         @NotBlank String endpointManagerId,
-        Map<String, Object> attributes,
-        List<@NotBlank String> dynamicAttributeNames
+        @NotNull Map<String, Object> workerProperties
 ) {
     public WorkerUpsertRequest {
-        attributes = attributes == null ? Map.of() : attributes;
-        dynamicAttributeNames = dynamicAttributeNames == null
-                ? List.of()
-                : List.copyOf(dynamicAttributeNames);
+        if (workerProperties != null) {
+            workerProperties = Collections.unmodifiableMap(
+                    new LinkedHashMap<>(workerProperties)
+            );
+        }
     }
 }
